--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -2,11 +2,11 @@
     <nav class="menu">
         <p class="menu-label">Menu</p>
         <ul class="menu-list">
-            <NavLink href="/" Match="NavLinkMatch.All" ActiveClass="active-link">
-                Home
+            <NavLink href="/houseMain" ActiveClass="active-link">
+                Houses
             </NavLink>
-            <NavLink href="/products" ActiveClass="active-link">
-                Products
+            <NavLink href="/houseSold" ActiveClass="active-link">
+                Sold Houses
             </NavLink>
             <NavLink href="/about" ActiveClass="active-link">
                 About
