--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,4 +8,7 @@
 @using Client
 @using Client.Shared
 @using Client.Shared.Products
+@using Client.Shared.Houses
 @using Data
+@using BlazorStrap
+@using BlazorStrap.Extensions.BSDataTable
