fixing build errors

--- a/Client/Pages/HouseMain.razor
+++ b/Client/Pages/HouseMain.razor
@@ -42,7 +42,7 @@
             <td>@item.DetailsLink</td>
             <td>
                 <BSButtonGroup>
-                    <BSButton Color="Color.Success"  @onclick="@(async _ => await SelectHouse.InvokeAsync(item))">Yes</BSButton>
+                    <BSButton Color="Color.Success" >Yes</BSButton>
                     <BSButton Color="Color.Warning">Maybe</BSButton>
                     <BSButton Color="Color.Danger">No</BSButton>
                 </BSButtonGroup>
